chore: 提取公共 mapper 避免生成很多重复文件